--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bruce MacDonald",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.13.4",
     "topojson": "^1.6.26"
   }
 }
